# plaxisproxy-excavation

./: .gitignore  CHANGELOG_ifc_exporter.md  MANIFEST.in  NOTICE  exam_mi.ipynb  example_excavation.ifc  example_excavation_v2.ifc  example_ifc_export.py  properties.xlsx  pyproject.toml  readme.md  readme_en.md  requirements.txt  runtest.sh  testmapper-万琪伟的MacBook Pro.py  testmapper.ipynb  testmapper.py  walls_horizontal_displacements.xlsx
examples/: fengshouhu.py  plaxis_config.py  testmapper.ipynb  testmapper.py
src/: borehole.py  excavation_builder.py  geometry.py  plaxisexcavation.py  plaxissession.py
src/components/: phase.py  projectinformation.py
src/materials/: anchormaterial.py  basematerial.py  beammaterial.py  pilematerial.py  platematerials.py  soilmaterials.py
src/plaxisproxy_excavation/: __init__.py  borehole.py  excavation.py  geometry.py  ifc_exporter.py  plaxisexcavation.py  plaxissession.py
src/structures/: anchor.py  basestructure.py  beam.py  load.py
tests/: __init__.py  test_borehole.py  test_geometry.py  test_plaxisexcavation.py
tests/Plaxishelper/: test_geometrymapper.py  test_phasemapper.py  test_plaxismapper.py  test_plaxisrunner.py
tests/components/: test_curvepoint.py  test_phase.py
tests/core/: test_core.py
tests/materials/: test_anchormaterial.py  test_basematerial.py  test_beammaterial.py  test_pilematerial.py  test_platematerial.py  test_soilmaterial.py
tests/structures/: test_anchor.py  test_basestructure.py  test_beam.py  test_embeddedpile.py  test_load.py  test_retainingwall.py  test_soilblock.py  test_well.py
(+48 files in other folders)
